<resources>
    <string name="app_name">ProductsApp</string>
    <string name="product_name">%1$s</string>
    <string name="quantity">Quantity: </string>
    <string name="quantity_value"> %1$s</string>
    <string name="total_price">Price: %1$s $</string>
    <string name="list_of_products">List of products:</string>
    <string name="order_products">Order products</string>
    <string name="price_cart">Total: %1$s $</string>
</resources>