<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left"
        android:layout_margin="20dp"
        android:paddingTop="20dp"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/productCartName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/quantityProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/totalPriceProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:layout_weight="2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/baseline_edit_24"
                android:padding="16dp"
                android:layout_marginEnd="16dp"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/baseline_delete_24"
            android:padding="16dp"
            android:layout_marginEnd="16dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>